k8s-manifests/mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: petclinic-db-svc
spec:
  selector:
    app: petclinic-db
  ports:
    - port: 3306
      targetPort: 3306
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petclinic-db
  labels:
    app: petclinic-db
spec:
  replicas: 1
  strategy: 
    type: Recreate
  template:
    metadata:
      name: petclinic-db
      labels:
        app: petclinic-db
  
    spec:
      #initContainers:
      #- name: db-init-container
      #  image: mysql:latest
      #  command: ["sh", "-c", "chmod +x /docker-entrypoint-initdb.d/init.sql"]
      #  volumeMounts:
      #    - name: mysql-initdb
      #      mountPath: /docker-entrypoint-initdb.d
      
      containers:
        - name: petclinic-db
          image: mysql:latest
          imagePullPolicy: IfNotPresent
          volumeMounts:
          - name: db-vol
            mountPath: /var/lib/mysql
          #- name: mysql-initdb
          #  mountPath: /docker-entrypoint-initdb.d
            
          ports:
            - containerPort: 3306
          resources:
#            requests:
#              cpu: 1000m
#              memory: 1G
#            limits:
#              cpu: 1000m
#              memory: 1G
          readinessProbe:
            tcpSocket:
              port: 3306
            failureThreshold: 3
            initialDelaySeconds: 30
          livenessProbe:
            tcpSocket:
              port: 3306
            initialDelaySeconds: 30     
      volumes:
        - name: db-vol
          persistentVolumeClaim:
            claimName: db-pvc
        #- name: mysql-initdb
        #  configMap:
        #    name: mysql-initdb
      terminationGracePeriodSeconds: 30            

  selector:
    matchLabels:
      app: petclinic-db
