k8s-manifests/was.yaml
apiVersion: v1
kind: Service
metadata:
  name: petclinic-svc
spec:
  selector:
    app: petclinic-was
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petclinic-was
  labels:
    app: petclinic-was
spec:
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 50%
  replicas: 2
  template:
    metadata:
      name: petclinic-was
      labels:
        app: petclinic-was
    spec:
      containers:
        - name: petclinic-was
#          image: spring-petclinic-data-jdbc:3.0.0.BUILD-SNAPSHOT
          image: petclinic-jdbc:v1.0.1
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
          resources:
#            requests:
#              cpu: 1000m
#              memory: 1G
#            limits:
#              cpu: 1000m
#              memory: 1G
          volumeMounts:
          - mountPath: /petclinic/properties
            name: properties-file
          - name: host-path
            mountPath: /log
          readinessProbe:
            tcpSocket:
              port: 8080
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            failureThreshold: 3
            successThreshold: 1
      terminationGracePeriodSeconds: 30
      volumes:
        - name: properties-file
          configMap:
            name: properties-file
            items:
              - key: was-properties
                path: application.properties
        - name : host-path
          hostPath:
            path: /log
            type: DirectoryOrCreate
      securityContext:
        runAsUser: 1000
        fsGroup: 1000     
  selector:
    matchLabels:
      app: petclinic-was
